Update new .jar file